# vulkan-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/json/: sortbin_reflection_info_simple.json
data/shaders/glsl/: std.vert
data/shaders/spirv/: std.vert.spv
examples/: CMakeLists.txt
examples/00_triangle/: main.cpp
examples/00_triangle/data/json/: app_state.json  sortbin_pipeline_state.json
examples/00_triangle/data/json/reflection/: sortbin_reflection.json
examples/00_triangle/data/shaders/glsl/: frame_desc_bindings.glsl
examples/01_camera/: main.cpp
examples/01_camera/data/json/reflection/: frame_desc_set_reflection.json
examples/01_camera/data/shaders/glsl/: std.frag
examples/camera/: CMakeLists.txt  main.cpp
examples/camera/data/json/: sortbin_info.json  sortbin_reflection_info_simple.json
examples/camera/data/shaders/: compile.sh
examples/shadows_00/: CMakeLists.txt  Camera.hpp  main.cpp
examples/shadows_00/data/json/: app_info.json  app_state.json  desc_layout_info.json  sortbin_info.json  sortbin_pipeline_state.json  sortbin_reflection_info_simple.json
examples/shadows_00/data/json/reflection/: sortbin_reflection.json
examples/shadows_00/data/shaders/: compile.sh
examples/shadows_00/data/shaders/glsl/: depth_pass.vert  forward_lighting.frag  forward_lighting.vert  std.frag  std.vert
examples/shadows_00/data/shaders/spirv/: depth_pass.vert.spv  forward_lighting.frag.spv  std.frag.spv  std.vert.spv
examples/triangle/: CMakeLists.txt  main.cpp
examples/triangle/data/json/: sortbin_reflection_info.json  vulkan_info.json
examples/triangle/data/shaders/glsl/: std.vert
examples/triangle/data/shaders/spirv/: std.frag.spv  std.vert.spv
renderer/: CMakeLists.txt
renderer/include/: Renderable.hpp  UploadInfo.hpp  renderer.hpp
renderer/src/: renderer.cpp
renderer/src/common/: BufferPool_VariableBlock.hpp  DescriptorVariable.hpp  GeometryBuffer.hpp  RenderPass.hpp  StagingBuffer.hpp  UniformBuffer.hpp  loader_shared.hpp  loader_sortbin.hpp  obj_BufferPool_ConstantBlock.hpp  vk_enum_to_string.hpp
vk_core/: vk_core
vk_core/include/: vk_core.hpp
vk_core/src/: vk_core.cpp
